# kapibara-service

./: Cargo.toml  README.md
src/: address.rs  direct.rs  error.rs  inbound.rs  lib.rs  mixed.rs  option.rs  outbound.rs  stream.rs  varint.rs
src/http/: inbound.rs  mod.rs  option.rs  outbound.rs  protocol.rs
src/socks/: inbound.rs  mod.rs  option.rs  outbound.rs
src/socks/protocol/: client.rs  error.rs  mod.rs  server.rs
src/vless/: error.rs  inbound.rs  mod.rs  option.rs  outbound.rs  protocol.rs
