[package]
name = "kapibara-service"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
bytes = "1.7.1"
http = "1.1.0"
serde = { version = "1.0.208", features = ["derive"] }
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["full"] }
trait-variant = "0.1.2"
uuid = "1.10.0"
